--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap Assignment</title>
     <!-- Add link to Bootstrap minified CSS using CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
@@ -16,20 +17,42 @@
         The navbar must be using the correct container class that sets the max-width at each breakpoint to be consistent with the rest of the page.
 
         Adjust the nav to be using the dark color theme instead of default in snippet. -->
+        <nav class="navbar navbar-expand-md bg-dark" data-bs-theme="dark">
+          <div class="container">
+            <a class="navbar-brand" href="#">Company Brand</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Features</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Pricing</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
     </header>
 
     <main>
       <section id="hero">
         <!-- Use a container class that will set a max-width at each breakpoint -->
-        <div> 
+        
+        <div class="container"> 
           <!-- Use flexbox classes to set hero text in the center of the image -->
-          <div>
+          <div class="d-flex justify-content-center align-items-center">
             <!-- Change text to white and center align text -->
-            <div>
+            <div class="text-white text-center">
               <!-- Use a display class for font for the h1 -->
-              <h1>Main heading for page</h1>
+              <h1 class="display-1">Main heading for page</h1>
               <!-- Use an appropriate class that styles the following text as lead text -->
-              <p>Some lead text or subtitle</p>
+              <p class="lead">Some lead text or subtitle</p>
             </div>
           </div>
         </div>
@@ -38,12 +61,12 @@
       <!-- Add padding to the top and bottom of the section -->
       <section id="intro">
         <!-- Use a container class that will set a max-width at each breakpoint -->
-        <div>
+        <div class="container">
           <!-- Adjust all h2 headings to have a margin bottom using the value 4 -->
-          <h2>Section heading</h2>
+          <h2 class="mb-4">Section heading</h2>
           <!-- Using the grid system, adjust the following so that the text is 100% until the large breakpoint when it will then span 10 columns -->
-          <div>
-            <div>
+          <div class="row">
+            <div class=" col-sm-2 col-md-6 col-lg-10">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam exercitationem voluptates dolore necessitatibus eius? Deserunt excepturi pariatur assumenda nemo laudantium fugit aliquid mollitia? Reiciendis consequuntur distinctio aperiam magni magnam asperiores.</p>
             </div>
           </div>
@@ -52,11 +75,11 @@
 
       <!-- Add padding to the top and bottom of the section -->
       <!-- Set section background color to use the dark theme with light text -->
-      <section id="two-column-section">
+      <section id="two-column-section" class="py-4 text-white bg-dark">
         <!-- Use a container class that will set a max-width at each breakpoint -->
         <div>
           <!-- Adjust all h2 headings to have a margin bottom using the value 4 -->
-          <h2>Section heading</h2>
+          <h2 class="mb-4">Section heading</h2>
           <!-- Using the grid system, adjust the following so that the text in both divs are 100% until the small breakpoint where it then divides into 2 evenly distributed columns and stays that way as the screen expands -->
           <div>
             <div>
@@ -74,7 +97,7 @@
         <!-- Use a container class that will set a max-width at each breakpoint -->
         <div>
           <!-- Adjust all h2 headings to have a margin bottom using the value 4 -->
-          <h2>Section heading</h2>
+          <h2 class="mb-4">Section heading</h2>
 
           <!-- Using the grid system, adjust the following so that the cards are 100% until the small breakpoint where it then divides to use 6 columns each, then again at the large breakpoint each card will span 3 columns each -->
           <!-- Add a gutter y using the value 4 -->
@@ -107,7 +130,7 @@
         <!-- Use a container class that will set a max-width at each breakpoint -->
         <div>
           <!-- Adjust all h2 headings to have a margin bottom using the value 4 -->
-          <h2>Some heading</h2>
+          <h2 class="mb-4">Some heading</h2>
           <!-- Using the grid system, adjust the first image and text are 100% until the large breakpoint where it then divides into 2 evenly distributed columns and stays that way as the screen expands. -->
           <div>
             <div>
@@ -139,7 +162,7 @@
         <!-- Use a container class that will set a max-width at each breakpoint -->
         <div>
           <!-- Adjust all h2 headings to have a margin bottom using the value 4 -->
-          <h2>Pick any Bootstrap component and explore</h2>
+          <h2 class="mb-4">Pick any Bootstrap component and explore</h2>
           <p>Within the available space, choose any component from Bootstrap and showcase it here. It can be as simple or complicated as you like but must stay within the div below.</p>
           <div>
             <!-- Place component here.  -->
