--- a/index.html
+++ b/index.html
@@ -164,22 +164,22 @@
           <h2 class="mb-4">Some heading</h2>
           <!-- Using the grid system, adjust the first image and text are 100% until the large breakpoint where it then divides into 2 evenly distributed columns and stays that way as the screen expands. -->
           <div class="row">
-            <div class="col-lg-6">
+            <div class="py-1 col-lg-6">
               <!-- Adjust the img with a class to make it responsive (fluid) -->
               <img src="images/abstract.jpg" class="img-fluid" alt="">
             </div>
-            <div class="col-lg-6">
+            <div class="py-1 col-lg-6">
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam exercitationem voluptates dolore necessitatibus eius? Deserunt excepturi pariatur assumenda nemo laudantium fugit aliquid mollitia? Reiciendis consequuntur distinctio aperiam magni magnam asperiores.</p>
             </div>
           </div>
           <!-- Using the grid system, adjust the second image and text are 100% until the large breakpoint where it then divides into 2 evenly distributed columns and stays that way as the screen expands. -->
           <!-- For the two pieces of content here, swap the order using a flex utility class  -->
           <div class="row">
-            <div class="col-lg-6" class="d-lg-flex flex-row-reverse">
+            <div class="py-1 col-lg-6" class="d-lg-flex flex-row-reverse">
               <!-- Adjust the img with a class to make it responsive (fluid) -->
               <img src="images/abstract.jpg" class="img-fluid" alt="">
             </div>
-            <div class="col-lg-6" class="d-flex flex-lg-row-reverse">
+            <div class="py-1 col-lg-6" class="d-flex flex-lg-row-reverse">
               <div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam exercitationem voluptates dolore necessitatibus eius? Deserunt excepturi pariatur assumenda nemo laudantium fugit aliquid mollitia? Reiciendis consequuntur distinctio aperiam magni magnam asperiores.</p>
               </div>
@@ -191,19 +191,22 @@
       <!-- Add padding to the top and bottom of the section -->
       <section class="py-4">
         <!-- Use a container class that will set a max-width at each breakpoint -->
-        <div>
+        <div class="container">
           <!-- Adjust all h2 headings to have a margin bottom using the value 4 -->
           <h2 class="mb-4">Pick any Bootstrap component and explore</h2>
           <p>Within the available space, choose any component from Bootstrap and showcase it here. It can be as simple or complicated as you like but must stay within the div below.</p>
-          <div>
+          <div class="text-center">
             <!-- Place component here.  -->
+            <div class="spinner-border text-danger" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
           </div>
         </div>
       </section>
     </main>
 
     <!-- Set background color to use the dark theme with light text -->
-    <footer>
+    <footer class="bg-dark">
       <!-- Use a container class that will set a max-width at each breakpoint -->
       <!-- Center align text -->
       <!-- Add padding to the top and bottom using value 3 -->
