--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
           <!-- Using the grid system, adjust the second image and text are 100% until the large breakpoint where it then divides into 2 evenly distributed columns and stays that way as the screen expands. -->
           <!-- For the two pieces of content here, swap the order using a flex utility class  -->
           <div class="row">
-            <div class="py-1 col-lg-6" class="flex-lg-row-reverse">
+            <div class="py-1 col-lg-6 order-lg-2 text-align-center">
               <!-- Adjust the img with a class to make it responsive (fluid) -->
               <img src="images/abstract.jpg" class="img-fluid" alt="">
             </div>
-            <div class="py-1 col-lg-6" class="d-flex flex-lg-row-reverse">
+            <div class="py-1 col-lg-6 order-lg-1 text-align-center">
               <div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam exercitationem voluptates dolore necessitatibus eius? Deserunt excepturi pariatur assumenda nemo laudantium fugit aliquid mollitia? Reiciendis consequuntur distinctio aperiam magni magnam asperiores.</p>
               </div>
